# tola-ssg

./: .gitignore  .ignore  Cargo.toml  README.md  default.nix  flake.nix  guix.scm
.github/workflows/: cachix.yml  release.yml
resources/starter_example/: tola.toml
resources/starter_example/content/: index.typ
resources/starter_example/public/: index.html
screenshots/: home.avif
src/: build.rs  builder.rs  cli.rs  config.rs  deploy.rs  deployer.rs  init.rs  initer.rs  log.rs  main.rs  serve.rs  server.rs  utils.rs  watch.rs  watcher.rs
src/utils/: build.rs  builder.rs  check.rs  checker.rs  command.rs  git.rs  log.rs  logger.rs  mod.rs  rss.rs  sitemap.rs  slug.rs  typst.rs  watch.rs  watcher.rs
