[package]
name = "tola"
version = "0.5.0"
edition = "2024"
description = "A static site generator for typst-based blog"

documentation = "https://github.com/kawayww/tola"
homepage = "https://github.com/kawayww/tola"
repository = "https://github.com/kawayww/tola"

keywords = ["blog", "static", "typst", "ssg", "cli"]
categories = ["command-line-utilities"]
license = "MIT"

# Reduce the size of binary file
[profile.release]
opt-level = 3
lto = true
panic = 'abort'
incremental = true
strip = true

[dependencies]
anyhow = "1.0.98"
which = "8.0.0"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "string"] }
colored = "3.0.0"
crossterm = "0.29.0"
minify-html = "0.16.4"
notify = "8.0.0"
rayon = "1.10.0"
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = "1.0.219"
toml = "0.8.23"
thiserror = "2.0.12"
educe = "0.6.0"
gix = { version = "0.72.1", default-features = true, features = ["basic"] }
